--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -4,8 +4,7 @@
   "DEVICE": "",
   "personal": {
     "identity-form": {
-      "introduction": "Now we need some additional information about you.",
-      "step-questions": "Next step: Fill in the following questions about yourself.",
+      "introduction": "Next step: Fill in the following questions about yourself.",
       "more-info-questions": "More about these questions",
       "name-label": "My full name:",
       "dob-label": "My date of birth:",
@@ -15,7 +14,7 @@
     },
     "create-password": {
       "introduction": "To create a Digital ID you need to complete the following steps.",
-      "step1": "Step 1: Create your password.",
+      "step1": "Step 1: Create a password.",
       "more-info-password": "More about passwords",
       "create-password": "Create password:",
       "confirm-password": "Confirm password:",
@@ -39,16 +38,16 @@
       "introduction": "In order to help you as best as possible, please tell us what your needs are.",
       "input-label": "My needs are:",
       "input-placeholder": "I need...",
-      "submit": "Submit needs",
-      "conclusion": "Thank you for sharing your needs. This will help us create better programs for the future."
+      "submit": "Submit my needs",
+      "conclusion": "Thank you for sharing. Understanding your needs will help us create better programs in your area."
     },
     "choose-credential-type": {
       "introduction": "Please select your next step.",
       "option1": "Apply to program",
       "option2": "Create a Digital ID",
       "option3": "Delete Digital ID",
-      "conclusion-program": "To request inclusion in a program you need to have a valid Digital ID first.",
-      "more-info-digital-id": "More about Digital ID's"
+      "conclusion-program": "To apply to a program you need to have a valid Digital ID.",
+      "more-info-digital-id": "More about Digital ID"
     },
     "select-appointment": {
       "introduction": "To make an appointment, select a timeslot:",
@@ -65,7 +64,6 @@
     },
     "select-country": {
       "introduction": "The next step is to select your location, so we can show you programs for that location.",
-      "step3": "Step 3: Select your location:",
       "conclusion": "Thank you, you have selected <strong>{{country}}</strong>."
     },
     "select-language": {
