Update/tweak texts (up to select-program)

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -75,7 +75,7 @@
       "result": "Thank you. You have selected <strong>{{language}}</strong>."
     },
     "select-program": {
-      "introduction": "You can now select a program.",
+      "introduction": "Next step: Select a program.",
       "more-info-programs": "More about programs",
       "program": "Program"
     },
