Update texts in UI
Fixes AB#591

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -1,21 +1,22 @@
 {
-  "WORLD": "",
+  "WORLD": "Community",
   "PERSONAL": "You",
-  "DEVICE": "",
+  "DEVICE": "Device",
   "personal": {
     "identity-form": {
       "introduction": "Next step: Fill in the following questions about yourself.",
-      "more-info-questions": "More about these questions",
+      "more-info-questions": "About these questions",
       "name-label": "My full name:",
       "dob-label": "My date of birth:",
       "dob-format": "dd / mm / yyyy",
-      "submit-button": "Save your information",
-      "conclusion": "We now have all information to create your Digital ID."
+      "submit-button": "Save my information",
+      "conclusion": "Thank you, your device has stored your information."
     },
     "create-password": {
       "introduction": "To create a Digital ID you need to complete the following steps.",
-      "step1": "Step 1: Create a password.",
-      "more-info-password": "More about passwords",
+      "more-info-digital-id": "About Digital ID",
+      "step1": "First step: Create a password.",
+      "more-info-password": "About passwords",
       "create-password": "Create password:",
       "confirm-password": "Confirm password:",
       "submit-password": "Create my password",
@@ -23,15 +24,15 @@
     },
     "enroll-in-program": {
       "introduction": "We have received your request to apply for <strong>{{programTitle}}</strong>.",
-      "introduction-questions": "To make sure you get the best possible help, please answer the following questions.",
-      "more-info-questions": "More about these questions",
-      "more-info-share": "More about who sees your information",
+      "introduction-questions": "To make sure you get the best possible help and a fair process, we need some personal information.",
+      "more-info-questions": "About this",
+      "more-info-share": "Who sees your information",
       "submit": "Save my answers",
-      "please-confirm": "Thank you. Please confirm and submit your answers.",
-      "submit-confirm": "Submit my answers",
-      "change": "Change my answers",
-      "confirm-received": "Thank you. We have received your request. To process your request we need to verify your information for both the Digital ID and the Program.",
-      "more-info-activation": "More about activation",
+      "please-confirm": "Below is an overview of your information. Please confirm and submit.",
+      "submit-confirm": "Submit my information",
+      "change": "Change my information",
+      "confirm-received": "Next step: Make an appointment for Digital ID activation and program application.",
+      "more-info-activation": "About activation",
       "prepare-documents": "To save time at your appointment, make sure to bring these documents:"
     },
     "initial-needs": {
@@ -47,50 +48,53 @@
       "option2": "Create a Digital ID",
       "option3": "Delete Digital ID",
       "conclusion-program": "To apply to a program you need to have a valid Digital ID.",
-      "more-info-digital-id": "More about Digital ID"
+      "more-info-digital-id": "About Digital ID"
     },
     "select-appointment": {
-      "introduction": "To make an appointment, select a date and time:",
+      "introduction": "Select a date and time:",
       "thanks-repeat": "You have selected the following date and time:",
       "documents": "Please ensure you have the following documents:",
       "from": "From",
       "till": "Till",
       "at": "At",
-      "more-info-documents": "More about these documents",
-      "confirm": "Confirm meeting time",
-      "change": "Change meeting time",
+      "please-confirm": "Please confirm the appointment",
+      "more-info-documents": "About these documents",
+      "confirm": "Confirm appointment",
+      "change": "Change appointment",
       "conclusion": "Thank you. Your appointment for Digital ID activation and program application is confirmed.",
       "qr-code": "Please show this QR-code at your meeting."
     },
     "select-country": {
-      "introduction": "The next step is to select your location, so we can show you programs for that location.",
+      "introduction": " Next step: Select your location.",
       "conclusion": "Thank you, you have selected <strong>{{country}}</strong>."
     },
     "select-language": {
-      "introduction": "Welcome to 121. Please select your language.<br><br>Bienvenu chez 121. Choisi votre langue<br><br>Welcome bij 121. Selecteer uw Taal",
-      "more-info": "More about 121",
+      "introduction": "Welcome to 121. Please select your language.<br><br>Bienvenu chez 121. Choisi votre langue.<br><br>Bienvenido a 121. Selecciona tu idioma.",
+      "more-info": "About 121",
       "option1": "English",
-      "option2": "Language 2",
-      "option3": "Language 3",
-      "result": "Thank you. You have selected <strong>{{language}}</strong>."
+      "option2": "Français",
+      "option3": "Español",
+      "result": "Thank you, you have selected <strong>{{language}}</strong>."
     },
     "select-program": {
       "introduction": "Next step: Select a program.",
-      "more-info-programs": "More about programs",
+      "more-info-programs": "About programs",
       "program": "Program"
     },
     "store-credential": {
-      "received": "Credential is received on phone",
-      "stored": "Credential is stored in the wallet"
+      "done": "Your Digital ID has been activated by NGO.",
+      "received": "Your Digital ID is received on your device.",
+      "stored": "Your Digital ID is stored in your wallet."
     },
     "handle-proof": {
-      "creating": "You have given us sufficient personal information to see if you can be part of the program. We will notify you if you have been included.",
-      "inclusion-status-positive": "You have been included in this program.",
-      "inclusion-status-negative": "You have not been included in this program."
+      "creating": "You have given us sufficient personal information to see if you can be part of the program.",
+      "notify": "We will notify you if you have been included.",
+      "inclusion-status-positive": "Thank you for your patience. You have been included in the program.",
+      "inclusion-status-negative": "Thank you for your patience. You have not been included in the program."
     }
   },
   "notification": {
-    "credential": "Credential received",
+    "credential": "Digital ID received",
     "inclusion": "Inclusion status received",
     "close": "close"
   },
