Added different error when server is unavailable in AW app AW#744

--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -10,6 +10,7 @@
       "password-placeholder": "Password...",
       "login-button": "Log in",
       "wrong-credentials": "Your email and/or password are not recognized. Please try again.",
+      "no-connection": "Not able to access the server. Please check your internet connection and try again later.",
       "logout-button": "Log out",
       "conclusion": "You are succesfully logged in."
     },
