--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -30,18 +30,11 @@
     "scan-qr": {
       "introduction": "Now scan the QR-code of the PA to identify him/her in the system.",
       "scan-button": "Scan QR-code",
-      "conclusion1": "Thank you. You have scanned the PA with DID",
-      "conclusion2": "applying for program"
-    },
-    "validate-identity": {
-      "introduction": "Below you see the PA's information for the Digital ID. Check it and if correct, confirm it. If not correct, tell the PA to change and resend it.",
-      "postpone-button": "Postpone verification",
-      "confirm-button": "Confirm verification",
-      "refresh-button": "Refresh information",
-      "conclusion": "The Digital ID has been created. As such there is no need, and thus no possibility, for you to see the PA's personal information any more here."
+      "error": "The scanned QR-code did not contain a valid combination of DID and program-ID. You can try scanning another QR-code.",
+      "conclusion": "Thank you. You have scanned a valid combination of DID and program-ID."
     },
     "validate-program": {
-      "introduction": "Thank you. Below you see the PA's information for the specific program. Check it and if correct, confirm it. If not correct, tell the PA to change and resend it.",
+      "introduction": "Below you see the PA's information for the specific program. Check it and if correct, confirm it. If not correct, tell the PA to change and resend it.",
       "postpone-button": "Postpone verification",
       "confirm-button": "Issue Program Credential",
       "refresh-button": "Refresh information",
