--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -1,7 +1,24 @@
 {
+  "ACCOUNT": "Account",
+  "PERSONAL": "Validation",
   "WORLD": "World",
-  "PERSONAL": "You",
-  "DEVICE": "Device",
+  "account": {
+    "introduction": "Welcome to 121. Please log in below.",
+    "login": "Log-in form",
+    "email-placeholder": "Email...",
+    "password-placeholder": "Password...",
+    "create-placeholder": "Create new password...",
+    "confirm-placeholder": "Confirm new password...",
+    "login-button": "Log in",
+    "wrong-credentials": "Your email and/or password are not recognized. Please try again.",
+    "no-connection": "Not able to access the server. Please check your internet connection and try again later.",
+    "logout-button": "Log out",
+    "change-password": "Change password",
+    "close-change-password": "Cancel change password",
+    "conclusion": "You are succesfully logged in.",
+    "unequal-passwords": "The passwords you provided are not the same. Please try again.",
+    "changed-password": "Your password is changed succesfully."
+  },
   "personal": {
     "login": {
       "introduction": "Welcome to 121. Please log in below.",
