--- a/interfaces/AW-App/src/assets/i18n/nl.json
+++ b/interfaces/AW-App/src/assets/i18n/nl.json
@@ -1,8 +1,8 @@
 {
   "WORLD": "Wereld",
-  "PERSONAL": "Persoonlijk",
+  "VALIDATION": "Persoonlijk",
   "DEVICE": "Apparaat",
-  "personal": {
+  "validation": {
     "select-language": {
       "introduction": "Welkom bij 121. Selecteer alstublieft een taal."
     }
