#826 unequal-assword text (same as AW)

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -11,6 +11,7 @@
       "create-password": "Create password:",
       "confirm-password": "Confirm password:",
       "submit-password": "Create my password",
+      "unequal-passwords": "The passwords you provided are not the same. Please try again.",
       "conclusion": "Great! You have created a password."
     },
     "enroll-in-program": {
