--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -20,6 +20,7 @@
       "more-info-questions": "About this",
       "more-info-share": "Who sees your information",
       "submit": "Save my answers",
+      "dob-feedback": "Your date of birth does not have a valid format. Please adjust and save again.",
       "please-confirm": "Below is an overview of your information. Please confirm and submit.",
       "submit-confirm": "Submit my information",
       "change": "Change my information",
