--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
       "conclusion": "Great! You have created a password."
     },
     "enroll-in-program": {
-      "introduction": "We have received your request to apply for <strong>{{programTitle}}</strong>.",
+      "introduction": "We have received your request to apply for <strong>{{programTitle}}</strong> of <strong>{{ngo}}</strong>.",
       "introduction-questions": "To make sure you get the best possible help and a fair process, we need some personal information.",
       "more-info-questions": "About this",
       "more-info-share": "Who sees your information",
