--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -6,7 +6,11 @@
     "create-password": {
       "introduction": "To create a Digital ID you need to complete the following steps.",
       "more-info-digital-id": "About Digital ID",
-      "step1": "First step: Create a password.",
+      "username-password": "First step: create a username and a password. You will need to remember these.",
+      "more-info-username-pw": "About usernames and passwords",
+      "create-username": "Create username:",
+      "submit-username": "Create my username",
+      "password-only": "First step: Create a password.",
       "more-info-password": "About passwords",
       "create-password": "Create password:",
       "confirm-password": "Confirm password:",
