AB#973 add phone-number component

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -75,6 +75,18 @@
       "change": "Change appointment",
       "conclusion": "Thank you. Your appointment for Digital ID activation and program application is confirmed."
     },
+    "phone-number": {
+      "introduction1": "You have the option of entering your phone number.",
+      "introduction2": "We use this to send you text-notifications when you are included or not and when you receive money.",
+      "introduction3": "If you do not want to enter your phone number, you will have to log in here yourself regularly for updates.",
+      "introduction4": "At the end of the program, your number will be deleted again.",
+      "input-label": "Phone number",
+      "input-placeholder": "Your phone number",
+      "submit": "Submit phone number",
+      "skip": "Skip",
+      "conclusion1": "Thank you. You will now receive notifications on this phone number: <strong>{{phone}}</strong>",
+      "conclusion2": "You have chosen not to leave a phone number. Please log in back here regularly, to check on updates."
+    },
     "meeting-reminder": {
       "documents": "Please ensure you have the following documents:",
       "from": "From",
