--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -24,7 +24,8 @@
       "submit-password": "Create my password",
       "username-not-unique": "The username you provide is not unique. Please try again.",
       "unequal-passwords": "The passwords you provided are not the same. Please try again.",
-      "conclusion": "Great! You have created a Digital ID and are currently logged in. You can log out, and find other account-features, under the green account-button in the top right."
+      "conclusion": "Great! You have created a Digital ID.",
+      "conclusion-web": "You are currently logged in. You can log out, and find other account-features, under the green account-button in the top right."
     },
     "login-identity": {
       "introduction": "To use an existing Digital ID you need to log in with your username and password.",
