--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -77,12 +77,11 @@
       "conclusion": "Thank you. Your appointment for Digital ID activation and program application is confirmed."
     },
     "phone-number": {
-      "introduction1": "You have the option of entering your phone number.",
+      "introduction1": "It is optional to enter your phone number.",
       "introduction2": "We use this to send you text-notifications when you are included or not and when you receive money.",
-      "introduction3": "If you do not want to enter your phone number, you will have to log in here yourself regularly for updates.",
-      "introduction4": "At the end of the program, your number will be deleted again.",
-      "input-label": "Phone number",
-      "input-placeholder": "Your phone number",
+      "introduction3": "If you do not want to enter your phone number, you have to log in here for updates.",
+      "introduction4": "At the end of the program, we will not keep your number.",
+      "input-label": "Phone number (with country-code)",
       "submit": "Submit phone number",
       "skip": "Skip",
       "conclusion1": "Thank you. You will now receive notifications on this phone number: <strong>{{phone}}</strong>",
