--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -118,7 +118,7 @@
       "program": "Program"
     },
     "store-credential": {
-      "done": "Your Digital ID has been activated by NGO.",
+      "done": "Your Digital ID has been activated by <strong>{{ngo}}</strong>.",
       "received": "Your Digital ID is received on your device.",
       "stored": "Your Digital ID is stored in your wallet."
     },
