AB#1076 create more-btn with full program-json

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -17,8 +17,16 @@
       }
     },
     "programs": {
-      "PROGRAMS": "All Programs",
-      "PROGRAM_DETAILS": "Program details"
+      "program-list": {
+        "title": "All Programs"
+      },
+      "program-details": {
+        "pageTitle": "Program details",
+        "more": "More",
+      },
+      "program-modal": {
+        "title": "Program JSON"
+      }
     }
   }
 }
