PA:Added delete user to interface and some error handling AB#1105 AB#1109 AB#1107

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -7,7 +7,9 @@
     "change-password": "Change password",
     "delete-digital-id": "Delete Digital ID",
     "close": "Close",
-    "logged-out": "You are succesfully logged out."
+    "logged-out": "You are succesfully logged out.",
+    "enter-password": "Your Password",
+    "delete-account-id": "Enter your password to delete your account"
   },
   "personal": {
     "create-identity": {
@@ -135,6 +137,7 @@
     "close": "close"
   },
   "shared": {
-    "submit-button": "Submit"
+    "submit-button": "Submit",
+    "close-buttion": "Close"
   }
 }
